--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,5 @@
-#version: '3.8'
-#services:
-#  zookeeper:
-#    image: confluentinc/cp-zookeeper:7.2.1
-#    environment:
-#      ZOOKEEPER_CLIENT_PORT: 2181
-#      ZOOKEEPER_TICK_TIME: 2000
-#    ports:
-#      - "2181:2181"
-#
-#  kafka:
-#    image: confluentinc/cp-kafka:7.2.1
-#    depends_on:
-#      - zookeeper
-#    ports:
-#      - "9092:9092"
-#    environment:
-#      KAFKA_BROKER_ID: 1
-#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-#      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-#      KAFKA_LOG_FLUSH_INTERVAL_MESSAGES: 10000
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#    volumes:
-#      - kafka-data:/var/lib/kafka/data
-#
-#  kafka_producer:
-#    build: .
-#    depends_on:
-#      - kafka
-#    environment:
-#      KAFKA_BOOTSTRAP_SERVERS: "kafka:29092"
-#    volumes:
-#      - .:/app
-#
-#volumes:
-#  kafka-data:
-#
 version: '3.9'
+
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.1
@@ -47,7 +7,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "2181:2181"
+      - "2182:2181"  # Changed the host port from 2181 to 2182
 
   kafka:
     image: confluentinc/cp-kafka:7.2.1
@@ -67,6 +27,47 @@ services:
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     volumes:
       - kafka-data:/var/lib/kafka/data
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.12.1
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+
+  flink-jobmanager:
+    image: flink:1.13.2-scala_2.12
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=jobmanager
+    ports:
+      - "8081:8081"
+    command: jobmanager
+    depends_on:
+      - zookeeper
+      - kafka
+
+  flink-taskmanager:
+    image: flink:1.13.2-scala_2.12
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=jobmanager
+    depends_on:
+      - flink-jobmanager
+    command: taskmanager
+
+  pyflink-job:
+    build: .
+    depends_on:
+      - flink-jobmanager
+      - flink-taskmanager
+      - kafka
+      - elasticsearch
 
   kafka_producer:
     build: .
