--- a/docker.yaml
+++ b/docker.yaml
@@ -1,109 +1,58 @@
-version: "3"
+version: '3.9'
+
 services:
   zookeeper:
-    image: zookeeper
-    restart: always
-    container_name: zookeeper
-    hostname: zookeeper
+    image: wurstmeister/zookeeper:3.4.6
     ports:
       - "2181:2181"
-    environment:
-      ZOO_MY_ID: 1
 
   kafka:
-    image: wurstmeister/kafka:latest
-    container_name: kafka
+    image: wurstmeister/kafka:2.13-2.7.0
     ports:
       - "9092:9092"
-      - "9094:9094"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9092,OUTSIDE://0.0.0.0:9094
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://localhost:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-
-  kafka_manager:
-    image: hlebalbau/kafka-manager:stable
-    container_name: kafka-manager
-    restart: always
-    ports:
-      - "9000:9000"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     depends_on:
       - zookeeper
-      - kafka
-    environment:
-      ZK_HOSTS: "zookeeper:2181"
-      APPLICATION_SECRET: "random-secret"
-      command: -Dpidfile.path=/dev/null
-
-  cache:
-    image: redis:6.2-alpine
-    restart: always
-    ports:
-      - '6379:6379'
-    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
-    volumes:
-      - cache:/data
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.1
-    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
     environment:
-      - xpack.security.enabled=false
       - discovery.type=single-node
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    cap_add:
-      - IPC_LOCK
-    volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
-      - "9300:9300"
 
   kibana:
-    container_name: kibana
-    image: docker.elastic.co/kibana/kibana:8.14.1
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    image: docker.elastic.co/kibana/kibana:7.12.1
     ports:
       - "5601:5601"
     depends_on:
       - elasticsearch
 
-  jobmanager:
-    image: flink:latest
+  flink-jobmanager:
+    image: flink:1.13.2-scala_2.12
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=jobmanager
     ports:
       - "8081:8081"
     command: jobmanager
-    environment:
-      - |
-        FLINK_PROPERTIES=
-        jobmanager.rpc.address: jobmanager        
-
-  taskmanager:
-    image: flink:latest
     depends_on:
-      - jobmanager
-    command: taskmanager
+      - zookeeper
+      - kafka
+
+  flink-taskmanager:
+    image: flink:1.13.2-scala_2.12
     environment:
-      - |
-        FLINK_PROPERTIES=
-        jobmanager.rpc.address: jobmanager
-        taskmanager.numberOfTaskSlots: 2        
+      - JOB_MANAGER_RPC_ADDRESS=jobmanager
+    depends_on:
+      - flink-jobmanager
+    command: taskmanager
 
-volumes:
-  elasticsearch-data:
-    driver: local
-  cache:
-    driver: local
-
-networks:
-  esnet:
+  pyflink-job:
+    build: .
+    depends_on:
+      - flink-jobmanager
+      - flink-taskmanager
+      - kafka
+      - elasticsearch
